tests/ui/parser/diff-markers/unclosed-delims-in-macro.stderr
error: this file contains an unclosed delimiter
  --> $DIR/unclosed-delims-in-macro.rs:11:54
   |
LL | macro_rules! foo {
   |                  - unclosed delimiter
LL | <<<<<<< HEAD
LL |     () {
   |        - this delimiter might not be properly closed...
...
LL | }
   | -                                                   ^
   | |
   | ...as it matches this but it has different indentation

error: aborting due to 1 previous error

